this is my 0910 add and modifies

--- a/src/2.Api/Applications/WebHost/Web.config
+++ b/src/2.Api/Applications/WebHost/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="IMSDB" connectionString="server=.;initial catalog=IMSDB;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
     <add name="LogDB" connectionString="server=.;initial catalog=LogDB;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
+    <!--<add name="BookDB" connectionString="server=.;initial catalog=LogDB;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />-->
     <!--<add name="RedisDB" connectionString="127.0.0.1:6379,Password=123456" />-->
   </connectionStrings>
   <system.web>
