--- a/src/2.Api/Core/IMS.Domain/IMS.Domain.csproj
+++ b/src/2.Api/Core/IMS.Domain/IMS.Domain.csproj
@@ -68,13 +68,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Constants.cs" />
+    <Compile Include="Models\Entities\Book.cs" />
     <Compile Include="Models\Entities\Contacter.cs" />
     <Compile Include="Models\Entities\Customer.cs" />
+    <Compile Include="Models\Entities\OwnSupplier.cs" />
+    <Compile Include="Models\Entities\OwnSupplierBaseClass.cs" />
+    <Compile Include="Models\Entities\OwnSupplierClass.cs" />
+    <Compile Include="Models\Entities\OwnSupplierContact.cs" />
     <Compile Include="Models\Records\CustomerRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IBookRepository.cs" />
     <Compile Include="Repositories\IContacterRepository.cs" />
     <Compile Include="Repositories\ICustomerRepository.cs" />
+    <Compile Include="Services\BookService.cs" />
     <Compile Include="Services\CustomerService.cs" />
+    <Compile Include="Services\IService\IBookService.cs" />
     <Compile Include="Services\IService\ICustomerService.cs" />
     <Compile Include="Services\IService\IOwnSupplierService.cs" />
     <Compile Include="Services\OwnSupplierService.cs" />
