--- a/src/2.Api/Core/IMS.Core/IMS.Core.csproj
+++ b/src/2.Api/Core/IMS.Core/IMS.Core.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Controllers\OwnSupplierController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BookCreateViewModel.cs" />
+    <Compile Include="ViewModels\BookEditViewModel.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\CustomerEditViewModel.cs" />
     <Compile Include="ViewModels\CustomerCreateViewModel.cs" />
